test/libyul/yulSyntaxTests/invalid/jumpi_disallowed.yul
{
    jumpi(2, 1)
}
// ----
// TypeError 5017: (6-11): The identifier "jumpi" is reserved and can not be used.
